--- a/pages/about.html
+++ b/pages/about.html
@@ -249,7 +249,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
@@ -257,7 +257,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
@@ -265,7 +265,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
@@ -273,7 +273,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
@@ -281,7 +281,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
@@ -289,7 +289,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
@@ -297,7 +297,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
@@ -305,7 +305,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
@@ -313,7 +313,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
@@ -321,7 +321,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
@@ -329,7 +329,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
@@ -337,7 +337,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
+                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
                                     </div>
