--- a/pages/painting-education.html
+++ b/pages/painting-education.html
@@ -256,7 +256,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
@@ -265,7 +265,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
@@ -274,7 +274,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
@@ -283,7 +283,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
@@ -292,7 +292,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
@@ -301,7 +301,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
@@ -310,7 +310,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
@@ -319,7 +319,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
@@ -328,7 +328,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
@@ -337,7 +337,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
@@ -346,7 +346,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
@@ -355,7 +355,7 @@
                                 <div class="swiper-slide my-stories__swiper-slide">
                                     <div class="my-stories__slide">
                                         <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                            <img src="../assets/images/no-photo.png" alt=""
                                                 class="my-stories__slide-img">
                                         </div>
                                         <div class="my-stories__title">Подпись</div>
