--- a/pages/about.html
+++ b/pages/about.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../assets/libs/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../assets/libs/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/libs/fancybox/fancybox.css">
+    <link rel="stylesheet" href="../assets/libs/stories/zuck.css">
+    <link rel="stylesheet" href="../assets/libs/stories/snapgram.css">
 
 
     <!-- СТИЛИ ОБЩИХ ЭЛЕМЕНТОВ -->
@@ -245,109 +247,12 @@
                 <div class="my-container my-stories__container">
                     <div class="my-stories__inner">
                         <div class="swiper my-stories__swiper">
-                            <div class="swiper-wrapper my-stories__swiper-wrapper">
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                                <div class="swiper-slide my-stories__swiper-slide">
-                                    <div class="my-stories__slide">
-                                        <div class="my-stories__slide-img-wrap">
-                                            <img src="../assets/images/no-photo.png" alt="" class="my-stories__slide-img">
-                                        </div>
-                                        <div class="my-stories__title">Подпись</div>
-                                    </div>
-                                </div>
-                            </div>
+                            <div id="stories" class="swiper-wrapper my-stories__swiper-wrapper"></div>
                         </div>
                     </div>
                 </div>
             </div>
-
+            
             <section class="about-info main__about-info">
                 <div class="my-container about-info__container">
                     <div class="about-info__video-wrap --video-poster">
