--- a/pages/about.html
+++ b/pages/about.html
@@ -1103,6 +1103,7 @@
     <script src="../assets/libs/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="../assets/libs/bootstrap/popper.min.js"></script>
     <script src="../assets/libs/fancybox/fancybox.umd.js"></script>
+    <script src="../assets/libs/stories/zuck.js"></script>
 
 
     <!-- ОБЩИЕ СКРИПТЫ -->
