--- a/pages/painting-education.html
+++ b/pages/painting-education.html
@@ -741,6 +741,7 @@
     <script src="../assets/libs/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="../assets/libs/bootstrap/popper.min.js"></script>
     <script src="../assets/libs/fancybox/fancybox.umd.js"></script>
+    <script src="../assets/libs/stories/zuck.js"></script>
 
 
     <!-- ОБЩИЕ СКРИПТЫ -->
