--- a/pages/about.html
+++ b/pages/about.html
@@ -1111,7 +1111,7 @@
     <script src="../assets/js/open-content.js"></script>
     <script src="../assets/js/fancybox-init.js"></script>
 
-    <script src="../assets/js/header.js"></script>
+    <script src="../assets/js/components/header.js"></script>
     <script src="../assets/js/components/stories.js"></script>
 
     <script src="../assets/js/sections/staff.js"></script>
