--- a/pages/blog.html
+++ b/pages/blog.html
@@ -524,7 +524,7 @@
 
     <!-- ОБЩИЕ СКРИПТЫ -->
     <script src="../assets/js/phone-mask.js"></script>
-    <script src="../assets/js/header.js"></script>
+    <script src="../assets/js/components/header.js"></script>
     <script src="../assets/js/fancybox-init.js"></script>
 
 
