--- a/pages/painting-education.html
+++ b/pages/painting-education.html
@@ -378,7 +378,7 @@
                             <div class="lesson-structure__lesson-stage-info --textImage_visible">
                                     <div class="lesson-structure__lesson-stage-number">01</div>
                                     <div class="lesson-structure__lesson-stage-pre-title">Урок начинается с&nbsp;выбора темы</div>
-                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-1.png"
+                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
                                         alt="" class="lesson-structure__lesson-stage-mini-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-image-wrap">
@@ -390,44 +390,44 @@
                         </div>
                         <div class="lesson-structure__lesson-stage">
                             <div class="lesson-structure__lesson-stage-info --textImage_visible">
-                                    <div class="lesson-structure__lesson-stage-number">01</div>
-                                    <div class="lesson-structure__lesson-stage-pre-title">Урок начинается с&nbsp;выбора темы</div>
-                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-1.png"
+                                    <div class="lesson-structure__lesson-stage-number">02</div>
+                                    <div class="lesson-structure__lesson-stage-pre-title">Определяем технику, в&nbsp;которой будем работать</div>
+                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
                                         alt="" class="lesson-structure__lesson-stage-mini-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-image-wrap">
                                 <img src="../assets/images/no-photo.png" alt="" class="lesson-structure__lesson-stage-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-texts">
-                                <p class="lesson-structure__lesson-stage-text">Педагог совместно с ребенком выбирает тему занятия: детям важно учиться изображать то, что им интересно. Это хорошо мотивирует на дальнейшее обучение</p>
+                                <p class="lesson-structure__lesson-stage-text">Согласно программе, определяем, в какой технике будем работать</p>
                             </div>
                         </div>
                         <div class="lesson-structure__lesson-stage">
                             <div class="lesson-structure__lesson-stage-info --textImage_visible">
-                                    <div class="lesson-structure__lesson-stage-number">01</div>
-                                    <div class="lesson-structure__lesson-stage-pre-title">Урок начинается с&nbsp;выбора темы</div>
-                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-1.png"
+                                    <div class="lesson-structure__lesson-stage-number">03</div>
+                                    <div class="lesson-structure__lesson-stage-pre-title">После чего дети выполняют набросок будущего рисунка</div>
+                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
                                         alt="" class="lesson-structure__lesson-stage-mini-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-image-wrap">
                                 <img src="../assets/images/no-photo.png" alt="" class="lesson-structure__lesson-stage-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-texts">
-                                <p class="lesson-structure__lesson-stage-text">Педагог совместно с ребенком выбирает тему занятия: детям важно учиться изображать то, что им интересно. Это хорошо мотивирует на дальнейшее обучение</p>
+                                <p class="lesson-structure__lesson-stage-text">Набрасываем эскиз, обращая внимание на детали</p>
                             </div>
                         </div>
                         <div class="lesson-structure__lesson-stage">
                             <div class="lesson-structure__lesson-stage-info --textImage_visible">
-                                    <div class="lesson-structure__lesson-stage-number">01</div>
-                                    <div class="lesson-structure__lesson-stage-pre-title">Оставшаяся часть урока посвящена работе с художественными инструментами</div>
-                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-1.png"
+                                    <div class="lesson-structure__lesson-stage-number">04</div>
+                                    <div class="lesson-structure__lesson-stage-pre-title">Оставшаяся часть урока посвящена работе с&nbsp;художественными инструментами</div>
+                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-8.png"
                                         alt="" class="lesson-structure__lesson-stage-mini-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-image-wrap">
                                 <img src="../assets/images/no-photo.png" alt="" class="lesson-structure__lesson-stage-img">
                             </div>
                             <div class="lesson-structure__lesson-stage-texts">
-                                <p class="lesson-structure__lesson-stage-text">Педагог совместно с ребенком выбирает тему занятия: детям важно учиться изображать то, что им интересно. Это хорошо мотивирует на дальнейшее обучение</p>
+                                <p class="lesson-structure__lesson-stage-text">В завершение ребенок заканчивает картину при помощи кистей, красок, пастельных карандашей и&nbsp;т.д.</p>
                             </div>
                         </div>
                     </div>
@@ -749,7 +749,7 @@
     <script src="../assets/js/open-content.js"></script>
     <script src="../assets/js/fancybox-init.js"></script>
 
-    <script src="../assets/js/header.js"></script>
+    <script src="../assets/js/components/header.js"></script>
     <script src="../assets/js/components/stories.js"></script>
 
     <script src="../assets/js/sections/simple-slider-section.js"></script>
