--- a/pages/development-center.html
+++ b/pages/development-center.html
@@ -323,8 +323,8 @@
                                                             <img src="../assets/images/pages/development-center/educational-lessons/slide-img-1.jpg" alt="" class="advantage-item__slide-img">
                                                         </div>
                                                         <div class="advantage-item__slide-body">
-                                                            <div class="advantage-item__slide-title">Занятия раз в неделю</div>
-                                                            <div class="advantage-item__slide-text">Занятия длятся 1&nbsp;час&nbsp;20&nbsp;минут, проходят по&nbsp;субботам</div>
+                                                            <div class="advantage-item__slide-title">Два часа в неделю</div>
+                                                            <div class="advantage-item__slide-text">Занятия проводятся 2&nbsp;раза&nbsp;в&nbsp;неделю&nbsp;по&nbsp;60&nbsp;минут</div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -334,8 +334,8 @@
                                                             <img src="../assets/images/pages/development-center/educational-lessons/slide-img-2.jpg" alt="" class="advantage-item__slide-img">
                                                         </div>
                                                         <div class="advantage-item__slide-body">
-                                                            <div class="advantage-item__slide-title">Оплата — раз в месяц</div>
-                                                            <div class="advantage-item__slide-text">Стоимость абонемента — <span class="nowrap">2800&nbsp;₽/месяц</span></div>
+                                                            <div class="advantage-item__slide-title"><span class="nowrap">3800&nbsp;₽/месяц</span></div>
+                                                            <div class="advantage-item__slide-text">Стоимость абонемента</div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -345,8 +345,8 @@
                                                             <img src="../assets/images/pages/development-center/educational-lessons/slide-img-3.jpg" alt="" class="advantage-item__slide-img">
                                                         </div>
                                                         <div class="advantage-item__slide-body">
-                                                            <div class="advantage-item__slide-title">Опытные педагоги</div>
-                                                            <div class="advantage-item__slide-text">Занятия ведет педагог с&nbsp;высшей категорией и&nbsp;многолетним опытом работы в&nbsp;худ.&nbsp;школе</div>
+                                                            <div class="advantage-item__slide-title">Две возрастные группы</div>
+                                                            <div class="advantage-item__slide-text">от&nbsp;9 месяцев до&nbsp;3&nbsp;лет и&nbsp;от 3&nbsp;до&nbsp;5&nbsp;лет</div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -1214,7 +1214,7 @@
     <script src="../assets/js/open-content.js"></script>
     <script src="../assets/js/fancybox-init.js"></script>
 
-    <script src="../assets/js/header.js"></script>
+    <script src="../assets/js/components/header.js"></script>
 
     <script src="../assets/js/sections/staff.js"></script>
     <script src="../assets/js/sections/reviews.js"></script>
