--- a/pages/news.html
+++ b/pages/news.html
@@ -561,7 +561,7 @@
     
     <!-- ОБЩИЕ СКРИПТЫ -->
     <script src="../assets/js/phone-mask.js"></script>
-    <script src="../assets/js/header.js"></script>
+    <script src="../assets/js/components/header.js"></script>
     <script src="../assets/js/fancybox-init.js"></script>
 
 
